--- a/pom.xml
+++ b/pom.xml
@@ -64,11 +64,12 @@
             <version>6.2</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.primefaces.themes</groupId>
-            <artifactId>omega</artifactId>
-            <version>1.0.10</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.primefaces.themes</groupId>-->
+            <!--<artifactId>omega</artifactId>-->
+            <!--<version>1.0.10</version>-->
+        <!--</dependency>-->
+
     </dependencies>
 
     <build>
